--- a/smacofUF/smacofUF.Rmd
+++ b/smacofUF/smacofUF.Rmd
@@ -112,6 +112,9 @@ Challenges: degeneracy
 
 ## Constraints
 
+
+
+
 # smacofUF
 
 ## Initial Configuration
@@ -138,6 +141,37 @@ $$
 $$
 
 ## Constraints
+
+Basic smacof theory (@deleeuw_heiser_C_81) tells us that having constraints
+on $X$ and $Y$ 
+
+Let
+\begin{equation}
+\overline{Z}:=
+\kbordermatrix{
+\mbox{\ }&p\\
+n&\overline{X}\\
+m&\overline{Y}
+}
+(\#eq:ufolzdef)
+\end{equation}
+be the Guttman transform of $Z^{(k)}$. In constrained smacof we 
+have to minimize, in each iteration,
+$$
+\text{tr}\ (X-\overline{X})'V_{11}(X-\overline{X})+
+2\ \text{tr}\ (X-\overline{X})'V_{12}(Y-\overline{Y})+
+\text{tr}\ (Y-\overline{Y})'V_{22}(Y-\overline{Y})
+$$
+over $X$ and $Y$ satisfying the constraints. That defines $Z^{(k+1)}$. As in 
+other block relaxation cases it is not necessary to actually minimize ..., it suffices to
+decrease it in some systematic way.
+
+If there are no constraints we have $Z^{(k+1)}=\Gamma(Z^{(k)})$.
+
+# Normalization Restrictions
+
+$X'V_{11}X=I$ or $\text{tr}\ X'V_{11}X=1$.
+
 
 ### Centroid Restriction
 
@@ -212,6 +246,46 @@ $$
 a=H'z=\{\overline{Y}'V_{22}-(X-\overline{X})'V_{12})\}z
 $$
 
+# Indicator Matrices
+
+Suppose $G_1,\cdots,G_m$ are indicator matrices, all with $n$ rows, but with
+$k_1,\cdots,k_m$ columns. Their elements are $g_{il}^j$ with $i=1,\cdots,n$
+and $l=1,\cdots,k_j$. Thus $g_{il}^j$ is either zero or one, and 
+$$
+\sum_{l=1}^{k_j}g_{il}^j=1
+$$
+for all $i=1,\cdots,n$ and $j=1,\cdots,m$.
+
+Now define the smacof loss function
+$$
+\sigma(X,Y_1,\cdots,Y_m)=\sum_{j=1}^m\sum_{i=1}^n\sum_{l=1}^{k_j}w_{il}^j(\delta_{il}^j-d(x_i,y^j_l))^2
+$$
+with $w_{il}^j=g_{il}^j$ and $\delta_{il}^j=1-g_{il}^j$. This means we are
+aiming for $d(x_i,y^j_l)=0$ whenever $g_{il}^j=1$ and we do not care what
+$d(x_i,y^j_l)$ is when $g_{il}^j=0$. 
+
+Our coding implies that 
+$w_{il}^j\delta_{il}^j=g_{il}^j(1-g_{il}^j)=0$ for all i,j,l. Thus
+$$
+\sigma(X,Y_1,\cdots,Y_m)=\sum_{j=1}^m\sum_{i=1}^n\sum_{l=1}^{k_j}g_{il}^jd^2(x_i,y^j_l)
+$$
+
+Now let
+$$
+G=\begin{bmatrix}G_1&\cdots&G_m\end{bmatrix}
+$$
+and
+$$
+Z=\begin{bmatrix}
+X\\
+Y_1\\
+\vdots\\
+Y_m
+\end{bmatrix}
+$$
+$$
+d^2(x_i,y_l^j)=\text{tr}\ Z'A_{il}^jZ
+$$
 # Examples 
 
 
