--- a/smacofHO/smacofHO.Rmd
+++ b/smacofHO/smacofHO.Rmd
@@ -1,10 +1,10 @@
 ---
 title: |
     | Smacof at 50: A Manual
-    | Part 6: Smacof with Categorical Data
+    | Part 6: Homogeneity Analysis with Smacof
 author: 
 - Jan de Leeuw - University of California Los Angeles
-date: 'Started April 13 2024, Version of April 21, 2024'
+date: '`r paste("Started April 13 2024, Version of",format(Sys.Date(),"%B %d, %Y"))`'
 output:
   bookdown::html_document2:
     keep_md: yes
@@ -26,12 +26,22 @@ fontsize: 12pt
 bibliography: ["mypubs.bib","total.bib"]
 abstract: smacofVO
 ---
+```{r loadpackages, echo = FALSE}
+#suppressPackageStartupMessages (library (foo, quietly = TRUE))
+```
+
+```{r load code, echo = FALSE}
+#dyn.load("foo.so")
+#source("janUtil.R")
+```
 
 
-
-
-
-**Note:** This is a working paper which will be expanded/updated frequently. All suggestions for improvement are welcome. 
+**Note:** This is a working manuscript which will be expanded/updated
+frequently. All suggestions for improvement are welcome. All Rmd, tex,
+html, pdf, R, and C files are in the public domain. Attribution will be
+appreciated, but is not required. The files can be found at
+<https://github.com/deleeuw> in the repositories smacofCode, smacofManual,
+and smacofExamples.
 
 # Introduction
 
